Added a lot of backend; app now has server activity which displayed GATT attributes. There is also a scan operation Fab button.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    // dependencies I added
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.github.medyo:fancybuttons:1.8.4'
+    compile 'com.android.support:design:26.1.0'
 }
